--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -1,7 +1,7 @@
 opam-version: "2.0"
 maintainer: "andreashauptmann@t-online.de"
 authors: [ "andreashauptmann@t-online.de" ]
-license: "GPLv3"
+license: "LGPL-2.1+ with OCaml linking exception"
 homepage: "https://github.com/fdopen/ppx_cstubs"
 dev-repo: "git+https://github.com/fdopen/ppx_cstubs.git"
 bug-reports: "https://github.com/fdopen/ppx_cstubs/issues"
