--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -20,6 +20,7 @@ depends: [
   "ocaml" {>= "4.02.3" & < "4.10.0"}
   "ocaml-migrate-parsetree"
   "ocamlfind" # not only a build dependency, it depends on findlib.top
+  "dune-configurator"
   "dune" {>= "1.6"}
   "ppx_tools_versioned" {>= "5.2.3"}
   "re" {>= "1.7.2"}
