--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -18,11 +18,11 @@ depends: [
   "containers" {>= "2.2"}
   "cppo" {build & >= "1.3"}
   "ocaml" {>= "4.02.3" & < "4.11.0"}
-  "ocaml-migrate-parsetree"
+  "ocaml-migrate-parsetree" {>= "1.5.0"}
   "ocamlfind" # not only a build dependency, it depends on findlib.top
   "dune-configurator"
   "dune" {>= "1.6"}
-  "ppx_tools_versioned" {>= "5.2.3"}
+  "ppx_tools_versioned" {>= "5.3.0"}
   "re" {>= "1.7.2"}
 ]
 
