--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -6,7 +6,6 @@ homepage: "https://fdopen.github.io/ppx_cstubs/"
 dev-repo: "git+https://github.com/fdopen/ppx_cstubs.git"
 doc: "https://fdopen.github.io/ppx_cstubs/"
 bug-reports: "https://github.com/fdopen/ppx_cstubs/issues"
-version: "0.4.3"
 build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
@@ -19,7 +18,7 @@ depends: [
   "cppo" {build & >= "1.3"}
   "ocaml" {>= "4.02.3" & < "4.13.0"}
   "ocaml-migrate-parsetree" {>= "1.7.0"}
-  "ocamlfind" # not only a build dependency, it depends on findlib.top
+  "ocamlfind" {>= "1.7.2"} # not only a build dependency, it depends on findlib.top
   "dune" {>= "1.6"}
   "ppx_tools_versioned" {>= "5.4.0"}
   "re" {>= "1.7.2"}
