--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -17,7 +17,7 @@ depends: [
   "containers" {>= "2.2"}
   "cppo" {build & >= "1.3"}
   "ocaml" {>= "4.04.2" & < "4.13.0"}
-  "ppxlib" {>= "0.18.0" & < "0.22.0"}
+  "ppxlib" {>= "0.22.0"}
   "ocamlfind" {>= "1.7.2"} # not only a build dependency, it depends on findlib.top
   "dune" {>= "1.6"}
   "re" {>= "1.7.2"}
