small fixes for ctypes.0.18
- use bigarray-compat instead of bigarray

- dynamically detect dependencies of ctypes

--- a/src/internal/dune
+++ b/src/internal/dune
@@ -25,7 +25,7 @@
  (synopsis "just ignore it")
  (public_name ppx_cstubs.internal)
  (private_modules attributes ctypes_type_printing_fake evil_hack extract_c extract_c_ml gen_c gen_ml inline_lexer keywords lconst main marshal_types mparsetree myconst ocaml_config options ppxc__script_real ppx_main ptree run script_result std toplevel uniq_ref ppx_cstubs_version)
- (libraries re.perl unix integers containers num findlib ctypes ppxlib ppx_cstubs)
+ (libraries bigarray-compat re.perl unix integers containers num findlib ctypes ppxlib ppx_cstubs)
  (preprocess (pps ppxlib.metaquot))
 ; broken .merlin generation ....
 ; (preprocess (per_module
