--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -10,6 +10,7 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "bigarray-compat"
   "ctypes" {>= "0.13.0"}
   "integers"
   "num"
