Fix for compilation error in ppx_cstubs examples
When issuing `make` in the ppx_cstubs `examples` subfolder the following problem is encountered:

ocamlfind: [WARNING] Package `threads': Linking problems may arise because of the missing -thread or -vmthread switch

This eventually ends up in a compiler error:

File "ftw.ml", line 1:
Error: No implementations provided for the following modules:
         Thread referenced from [ETC. ETC.]/_opam/lib/ctypes/ctypes-foreign.cmxa(Foreign)
         Mutex referenced from [ETC. ETC]/_opam/lib/ctypes/ctypes-foreign.cmxa(Foreign)

Other examples e.g. inline.exe etc. also complain about missing -thread

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -21,7 +21,7 @@ default: ftw.exe $(EXAMPLES)
 	@dune exec --no-print-directory --display=quiet -- ppx_cstubs $< -pretty -o-ml $(basename $@).ml -o-c $(basename $@)_stubs.c
 
 %.exe: %_stubs.c %.ml
-	@dune exec --no-print-directory --display=quiet -- ocamlfind opt -package ctypes,ctypes.foreign,ppx_cstubs -linkpkg $^ -o $@
+	@dune exec --no-print-directory --display=quiet -- ocamlfind opt -thread -package ctypes,ctypes.foreign,ppx_cstubs -linkpkg $^ -o $@
 
 clean:
 	rm -f *.obj *.o *.cm* *.exe *_stubs.c ftw.ml inline.ml time.ml getpwent.ml
