--- a/src/internal/dune
+++ b/src/internal/dune
@@ -24,7 +24,7 @@
  (name ppxc__script)
  (synopsis "just ignore it")
  (public_name ppx_cstubs.internal)
- (private_modules attributes ctypes_type_printing_fake evil_hack extract_c extract_c_ml gen_c gen_ml inline_lexer keywords lconst main marshal_types mparsetree myconst ocaml_config options ppxc__script_real ppx_main ptree run script_result std toplevel uniq_ref ppx_cstubs_version)
+ (private_modules attributes ctypes_type_printing_fake evil_hack extract_c extract_c_ml gen_c gen_ml inline_lexer keywords lconst main marshal_types mparsetree myconst ocaml_config options ppxc__script_real ppx_main ptree run script_result std toplevel uniq_ref ppx_cstubs_version c_compile)
  (libraries bigarray-compat re.perl unix integers containers num findlib ctypes ppxlib ppx_cstubs)
  (preprocess (pps ppxlib.metaquot))
 ; broken .merlin generation ....
