--- a/ppx_cstubs.opam
+++ b/ppx_cstubs.opam
@@ -1,7 +1,7 @@
 opam-version: "2.0"
 maintainer: "andreashauptmann@t-online.de"
 authors: [ "andreashauptmann@t-online.de" ]
-license: "LGPL-2.1-or-later with OCaml-LGPL-linking-exception"
+license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
 homepage: "https://fdopen.github.io/ppx_cstubs/"
 dev-repo: "git+https://github.com/fdopen/ppx_cstubs.git"
 doc: "https://fdopen.github.io/ppx_cstubs/"
@@ -15,9 +15,9 @@ depends: [
   "integers"
   "num"
   "result"
-  "containers" {>= "2.2"}
+  "containers" {>= "3.6"}
   "cppo" {build & >= "1.3"}
-  "ocaml" {>= "4.02.3" & < "4.14.0"}
+  "ocaml" {>= "4.02.3"}
   "ocaml-migrate-parsetree" {>= "1.7.0"}
   "ocamlfind" {>= "1.7.2"} # not only a build dependency, it depends on findlib.top
   "dune" {>= "1.6"}
@@ -25,10 +25,7 @@ depends: [
   "re" {>= "1.7.2"}
 ]
 
-synopsis: """
-Preprocessor for easier stub generation with ctypes
-"""
-
+synopsis: "Preprocessor for easier stub generation with ctypes"
 description: """
 ppx_cstubs is a ppx-based preprocessor for stub generation with
 ctypes. ppx_cstubs creates two files from a single ml file: a file
